--- a/package.json
+++ b/package.json
@@ -1,28 +1,27 @@
 {
-  "name": "highlightjs-cypher",
-  "version": "1.1.5",
-  "description": "Cypher Query Language of neo4j syntax highlighting plugin for highlight.js",
-  "main": "src/cypher.js",
+  "name": "highlightjs-phix",
+  "version": "1.0.2",
+  "description": "Phix syntax highlighting plugin for highlight.js",
+  "main": "src/phix.js",
   "scripts": {
     "test": "./node_modules/.bin/mocha --reporter spec"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/highlightjs/highlightjs-cypher.git"
+    "url": "git+https://github.com/petelomax/highlightjs-phix.git"
   },
   "keywords": [
-    "cypher",
-    "neo4j",
+    "phix",
     "hljs",
     "highlightjs",
     "highlight.js"
   ],
-  "author": "Gustavo Reis",
+  "author": "Pete Lomax",
   "license": "CC0-1.0",
   "bugs": {
-    "url": "https://github.com/highlightjs/highlightjs-cypher/issues"
+    "url": "https://github.com/petelomax/highlightjs-phix/issues"
   },
-  "homepage": "https://github.com/highlightjs/highlightjs-cypher#readme",
+  "homepage": "https://github.com/petelomax/highlightjs-phix#readme",
   "devDependencies": {
     "highlight.js": "^10.7.2",
     "mocha": "^10.0.0",
